--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -1,3 +1,29 @@
+.intro-containter {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.my-name{
+    margin: 0 auto;
+    border-right: 2px solid rgb(0,0,0);
+    font-size: 300%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typewriter 2s steps(40) 0.5s 1 normal both,
+               blinkTextCursor 500ms steps(44) infinite normal;
+}
+
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 16.3em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgb(0,0,0);}
+  to{border-right-color: transparent;}
+}
+
 .profile-icon li{
   display:inline-block;
   list-style-type:none;
