--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -39,3 +39,11 @@
 .profile-icon li img:hover {
   opacity: 0.5;
 }
+
+hr {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image:
+  linear-gradient(to right, #ccc, #333, #ccc);
+}
